<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/tvTargetCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/Your_Selected_Calories_is" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:orientation="vertical">

        <NumberPicker
            android:id="@+id/numberpicker"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:descendantFocusability="blocksDescendants" />

    </LinearLayout>
    <LinearLayout
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancelDialog"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CalorieCancel"
            android:textColor="@color/colorBlack"
            android:background="@color/colorBlue"/>
        <Button
            android:id="@+id/btnAddQty"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CalorieAdd"
            android:textColor="@color/colorBlack"
            android:background="@color/colorBlue"/>
    </LinearLayout>


</LinearLayout>