<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorloginbackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/BmiWeight" />

                <EditText
                    android:id="@+id/editBMIWeight"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="number"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/tvBMIWeightUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="lb" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/BMISwitch_Weight"
                        style="@style/SwitchButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/colorBlack"
                        android:textSize="12dp"
                        app:kswTextOff="lb"
                        app:kswTextOn="kg" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/BmiHeight" />

                <EditText
                    android:id="@+id/editBMIHeight"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="number"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/tvBMIunit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="ft" />

                <EditText
                    android:id="@+id/editBMIinches"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="number"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/tvBMIunitInch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="in" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/BMISwitch_Height"
                        style="@style/SwitchButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/colorBlack"
                        android:textSize="12dp"
                        app:kswTextOff="ft"
                        app:kswTextOn="cm" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/Bmi_Calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/calculate_view"
                android:text="@string/BmiCalculate"
                android:textAllCaps="false"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_lable_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:text="@string/BmiResult"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bmi_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:textColor="@color/ColorRed"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_lable_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="15dp"
                android:text="@string/BmiStatus"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bmi_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:textColor="@color/ColorRed"
                android:textSize="20dp" />

            <Button
                android:id="@+id/Bmi_History"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/calculate_view"
                android:text="@string/BmiHistory"
                android:textAllCaps="false"
                android:textSize="12dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>